@@ -37,7 +37,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         ArrayDeque<Integer> q = new ArrayDeque<Integer>();
         assertTrue(q.isEmpty());
         for (int i = 0; i < n; ++i)
-            assertTrue(q.offerLast(new Integer(i)));
+            assertTrue(q.offerLast(Integer.valueOf(i)));
         assertFalse(q.isEmpty());
         assertEquals(n, q.size());
         return q;
@@ -76,7 +76,7 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testConstructor5() {
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             new ArrayDeque(Arrays.asList(ints));
             shouldThrow();
@@ -89,7 +89,7 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testConstructor6() {
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         ArrayDeque q = new ArrayDeque(Arrays.asList(ints));
         for (int i = 0; i < SIZE; ++i)
             assertEquals(ints[i], q.pollFirst());
@@ -101,9 +101,9 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testEmpty() {
         ArrayDeque q = new ArrayDeque();
         assertTrue(q.isEmpty());
-        q.add(new Integer(1));
+        q.add(Integer.valueOf(1));
         assertFalse(q.isEmpty());
-        q.add(new Integer(2));
+        q.add(Integer.valueOf(2));
         q.removeFirst();
         q.removeFirst();
         assertTrue(q.isEmpty());
@@ -120,7 +120,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         }
         for (int i = 0; i < SIZE; ++i) {
             assertEquals(i, q.size());
-            q.add(new Integer(i));
+            q.add(Integer.valueOf(i));
         }
     }
 
@@ -321,7 +321,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         ArrayDeque q = new ArrayDeque();
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE - 1; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         try {
             q.addAll(Arrays.asList(ints));
             shouldThrow();
@@ -335,7 +335,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         Integer[] empty = new Integer[0];
         Integer[] ints = new Integer[SIZE];
         for (int i = 0; i < SIZE; ++i)
-            ints[i] = new Integer(i);
+            ints[i] = Integer.valueOf(i);
         ArrayDeque q = new ArrayDeque();
         assertFalse(q.addAll(Arrays.asList(empty)));
         assertTrue(q.addAll(Arrays.asList(ints)));
@@ -535,11 +535,11 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testRemoveFirstOccurrence() {
         ArrayDeque q = populatedDeque(SIZE);
         for (int i = 1; i < SIZE; i += 2) {
-            assertTrue(q.removeFirstOccurrence(new Integer(i)));
+            assertTrue(q.removeFirstOccurrence(Integer.valueOf(i)));
         }
         for (int i = 0; i < SIZE; i += 2) {
-            assertTrue(q.removeFirstOccurrence(new Integer(i)));
-            assertFalse(q.removeFirstOccurrence(new Integer(i + 1)));
+            assertTrue(q.removeFirstOccurrence(Integer.valueOf(i)));
+            assertFalse(q.removeFirstOccurrence(Integer.valueOf(i + 1)));
         }
         assertTrue(q.isEmpty());
     }
@@ -550,11 +550,11 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testRemoveLastOccurrence() {
         ArrayDeque q = populatedDeque(SIZE);
         for (int i = 1; i < SIZE; i += 2) {
-            assertTrue(q.removeLastOccurrence(new Integer(i)));
+            assertTrue(q.removeLastOccurrence(Integer.valueOf(i)));
         }
         for (int i = 0; i < SIZE; i += 2) {
-            assertTrue(q.removeLastOccurrence(new Integer(i)));
-            assertFalse(q.removeLastOccurrence(new Integer(i + 1)));
+            assertTrue(q.removeLastOccurrence(Integer.valueOf(i)));
+            assertFalse(q.removeLastOccurrence(Integer.valueOf(i + 1)));
         }
         assertTrue(q.isEmpty());
     }
@@ -565,9 +565,9 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testContains() {
         ArrayDeque q = populatedDeque(SIZE);
         for (int i = 0; i < SIZE; ++i) {
-            assertTrue(q.contains(new Integer(i)));
+            assertTrue(q.contains(Integer.valueOf(i)));
             assertEquals(i, q.pollFirst());
-            assertFalse(q.contains(new Integer(i)));
+            assertFalse(q.contains(Integer.valueOf(i)));
         }
     }
 
@@ -579,7 +579,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         q.clear();
         assertTrue(q.isEmpty());
         assertEquals(0, q.size());
-        assertTrue(q.add(new Integer(1)));
+        assertTrue(q.add(Integer.valueOf(1)));
         assertFalse(q.isEmpty());
         q.clear();
         assertTrue(q.isEmpty());
@@ -594,7 +594,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         for (int i = 0; i < SIZE; ++i) {
             assertTrue(q.containsAll(p));
             assertFalse(p.containsAll(q));
-            assertTrue(p.add(new Integer(i)));
+            assertTrue(p.add(Integer.valueOf(i)));
         }
         assertTrue(p.containsAll(q));
     }
@@ -722,7 +722,7 @@ public class ArrayDequeTest extends JSR166TestCase {
         ArrayDeque l = new ArrayDeque();
         l.add(new Object());
         try {
-            l.toArray(null);
+            l.toArray((Object[]) null);
             shouldThrow();
         } catch (NullPointerException success) {}
     }
@@ -732,7 +732,7 @@ public class ArrayDequeTest extends JSR166TestCase {
      */
     public void testToArray1_BadArg() {
         ArrayDeque l = new ArrayDeque();
-        l.add(new Integer(5));
+        l.add(Integer.valueOf(5));
         try {
             l.toArray(new String[10]);
             shouldThrow();
@@ -787,17 +787,17 @@ public class ArrayDequeTest extends JSR166TestCase {
             int max = rng.nextInt(5) + 2;
             int split = rng.nextInt(max - 1) + 1;
             for (int j = 1; j <= max; ++j)
-                q.add(new Integer(j));
+                q.add(Integer.valueOf(j));
             Iterator it = q.iterator();
             for (int j = 1; j <= split; ++j)
-                assertEquals(it.next(), new Integer(j));
+                assertEquals(it.next(), Integer.valueOf(j));
             it.remove();
-            assertEquals(it.next(), new Integer(split + 1));
+            assertEquals(it.next(), Integer.valueOf(split + 1));
             for (int j = 1; j <= split; ++j)
-                q.remove(new Integer(j));
+                q.remove(Integer.valueOf(j));
             it = q.iterator();
             for (int j = split + 1; j <= max; ++j) {
-                assertEquals(it.next(), new Integer(j));
+                assertEquals(it.next(), Integer.valueOf(j));
                 it.remove();
             }
             assertFalse(it.hasNext());
@@ -830,9 +830,9 @@ public class ArrayDequeTest extends JSR166TestCase {
     public void testDescendingIteratorOrdering() {
         final ArrayDeque q = new ArrayDeque();
         for (int iters = 0; iters < 100; ++iters) {
-            q.add(new Integer(3));
-            q.add(new Integer(2));
-            q.add(new Integer(1));
+            q.add(Integer.valueOf(3));
+            q.add(Integer.valueOf(2));
+            q.add(Integer.valueOf(1));
             int k = 0;
             for (Iterator it = q.descendingIterator(); it.hasNext();) {
                 assertEquals(++k, it.next());
@@ -855,17 +855,17 @@ public class ArrayDequeTest extends JSR166TestCase {
             int max = rng.nextInt(5) + 2;
             int split = rng.nextInt(max - 1) + 1;
             for (int j = max; j >= 1; --j)
-                q.add(new Integer(j));
+                q.add(Integer.valueOf(j));
             Iterator it = q.descendingIterator();
             for (int j = 1; j <= split; ++j)
-                assertEquals(it.next(), new Integer(j));
+                assertEquals(it.next(), Integer.valueOf(j));
             it.remove();
-            assertEquals(it.next(), new Integer(split + 1));
+            assertEquals(it.next(), Integer.valueOf(split + 1));
             for (int j = 1; j <= split; ++j)
-                q.remove(new Integer(j));
+                q.remove(Integer.valueOf(j));
             it = q.descendingIterator();
             for (int j = split + 1; j <= max; ++j) {
-                assertEquals(it.next(), new Integer(j));
+                assertEquals(it.next(), Integer.valueOf(j));
                 it.remove();
             }
             assertFalse(it.hasNext());
